# bt_api_wazirx

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_wazirx/: __init__.py  plugin.py  registry_registration.py
src/bt_api_wazirx/configs/: wazirx.yaml
src/bt_api_wazirx/errors/: __init__.py
src/bt_api_wazirx/exchange_data/: __init__.py
src/bt_api_wazirx/feeds/live_wazirx/: request_base.py  spot.py
src/bt_api_wazirx/tickers/: __init__.py
tests/containers/exchanges/: test_wazirx_exchange_data.py
tests/feeds/: test_wazirx_request_data_extra.py
